testing/ShouldFail/reservedWord.gp
file:"a"
%%
func(){
    int if = 3;
    return 3.0;
}